# drm-playground

./: .gitignore  LICENSE  README.md  dp.h  drm.c  drm.h  drm_connector.c  drm_crtc.c  drm_device.c  drm_plane.c  drm_prop.c  fb_dumb.c  main.c  meson.build  planes.c  util.c  writeback.c
include/: dp.h  dp_drm.h  util.h
